cargo_check_verify_5.log
warning: /app/crates/auth-platform/Cargo.toml: file `/app/crates/auth-platform/src/lib.rs` found to be present in multiple build targets:
  * `lib` target `auth_platform`
  * `integration-test` target `lib`
warning: unused imports: `Serialize` and `de::DeserializeOwned`
 --> crates/auth-cache/src/lib.rs:4:13
  |
4 | use serde::{de::DeserializeOwned, Serialize};
  |             ^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: `auth-cache` (lib) generated 1 warning (run `cargo fix --lib -p auth-cache` to apply 1 suggestion)
    Checking auth-api v0.1.0 (/app/crates/auth-api)
warning: unused import: `StatusCode`
 --> crates/auth-api/src/handlers/oidc_provider.rs:5:12
  |
5 |     http::{StatusCode, HeaderMap},
  |            ^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `std::sync::Arc`
 --> crates/auth-api/src/handlers/oidc_provider.rs:8:5
  |
8 | use std::sync::Arc;
  |     ^^^^^^^^^^^^^^

warning: unused import: `http::StatusCode`
  --> crates/auth-api/src/handlers/auth_flow.rs:14:5
   |
14 |     http::StatusCode,
   |     ^^^^^^^^^^^^^^^^

warning: unused import: `auth_cache::Cache`
  --> crates/auth-api/src/handlers/oidc_provider.rs:12:5
   |
12 | use auth_cache::Cache;
   |     ^^^^^^^^^^^^^^^^^

warning: unused variable: `e`
   --> crates/auth-api/src/handlers/oidc_provider.rs:126:19
    |
126 |         .map_err(|e| ApiError::new(AuthError::InternalError))?; // Log error in real app
    |                   ^ help: if this is intentional, prefix it with an underscore: `_e`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: `auth-api` (lib) generated 5 warnings (run `cargo fix --lib -p auth-api` to apply 4 suggestions)
    Checking auth-sso-platform v0.1.0 (/app)
error[E0308]: mismatched types
  --> src/bin/test_caching.rs:15:44
   |
15 |     let cache = match MultiLevelCache::new(redis_url) {
   |                       -------------------- ^^^^^^^^^ expected `Option<String>`, found `&str`
   |                       |
   |                       arguments to this function are incorrect
   |
   = note:   expected enum `std::option::Option<std::string::String>`
           found reference `&str`
note: associated function defined here
  --> /app/crates/auth-cache/src/lib.rs:21:12
   |
21 |     pub fn new(redis_url: Option<String>) -> anyhow::Result<Self> {
   |            ^^^

error[E0308]: mismatched types
  --> src/bin/test_caching.rs:30:25
   |
30 |     cache.set("user:1", &user, Duration::from_secs(10)).await.expect("Set failed");
   |           ---           ^^^^^ expected `&str`, found `&TestUser`
   |           |
   |           arguments to this method are incorrect
   |
   = note: expected reference `&str`
              found reference `&TestUser`
note: method defined here
  --> /app/crates/auth-cache/src/lib.rs:11:14
   |
11 |     async fn set(&self, key: &str, value: &str, ttl: Duration) -> anyhow::Result<()>;
   |              ^^^

error[E0107]: method takes 0 generic arguments but 1 generic argument was supplied
  --> src/bin/test_caching.rs:34:25
   |
34 |     let fetched = cache.get::<TestUser>("user:1").await.expect("Key missing");
   |                         ^^^------------ help: remove the unnecessary generics
   |                         |
   |                         expected 0 generic arguments
   |
note: method defined here, with 0 generic parameters
  --> /app/crates/auth-cache/src/lib.rs:10:14
   |
10 |     async fn get(&self, key: &str) -> anyhow::Result<Option<String>>;
   |              ^^^

error[E0308]: mismatched types
  --> src/bin/test_caching.rs:35:22
   |
35 |     assert_eq!(user, fetched);
   |                      ^^^^^^^ expected `TestUser`, found `Option<String>`
   |
   = note: expected struct `TestUser`
                found enum `std::option::Option<std::string::String>`

error[E0107]: method takes 0 generic arguments but 1 generic argument was supplied
  --> src/bin/test_caching.rs:41:25
   |
41 |     let missing = cache.get::<TestUser>("user:1").await;
   |                         ^^^------------ help: remove the unnecessary generics
   |                         |
   |                         expected 0 generic arguments
   |
note: method defined here, with 0 generic parameters
  --> /app/crates/auth-cache/src/lib.rs:10:14
   |
10 |     async fn get(&self, key: &str) -> anyhow::Result<Option<String>>;
   |              ^^^

error[E0599]: no method named `is_none` found for enum `Result<T, E>` in the current scope
  --> src/bin/test_caching.rs:42:21
   |
42 |     assert!(missing.is_none());
   |                     ^^^^^^^
   |
note: the method `is_none` exists on the type `std::option::Option<std::string::String>`
  --> /rustc/ded5c06cf21d2b93bffd5d884aa6e96934ee4234/library/core/src/option.rs:683:5
help: consider using `Result::expect` to unwrap the `std::option::Option<std::string::String>` value, panicking if the value is a `Result::Err`
   |
42 |     assert!(missing.expect("REASON").is_none());
   |                    +++++++++++++++++
help: there is a method `is_ok` with a similar name
   |
42 -     assert!(missing.is_none());
42 +     assert!(missing.is_ok());
   |

Some errors have detailed explanations: E0107, E0308, E0599.
For more information about an error, try `rustc --explain E0107`.
error: could not compile `auth-sso-platform` (bin "test_caching") due to 6 previous errors
warning: build failed, waiting for other jobs to finish...
